favicon + stop flickering

--- a/css/main.sass
+++ b/css/main.sass
@@ -17,6 +17,7 @@ a
 .header
   background: white
   -webkit-transition: all 0.1s ease
+  -webkit-transform: translate3d(0,0,0)
   transition: all 0.1s ease
   overflow: hidden
 
@@ -25,6 +26,7 @@ a
     font-size: 6.25rem
     // margin-left: 5rem
     -webkit-transition: all 0.2s ease
+    -webkit-transform: translate3d(0,0,0)
     transition: all 0.2s ease
 
     &.shrink
